Small changes to DOC 2022/2023 code

--- a/processing_scripts/DOC/tmp_doc_2022/COMPASS_TEMPEST_Collate_DOC_2022_Data.Rmd
+++ b/processing_scripts/DOC/tmp_doc_2022/COMPASS_TEMPEST_Collate_DOC_2022_Data.Rmd
@@ -345,7 +345,7 @@ raw_metadata_pt_ids <- subset(raw_metadata_pt_ids, Volume_mL > 0)
 ```
 
 
-## Combine event and non-event metadata
+## Combine event, non-event, and pre-treatment metadata
 ```{r}
 
 doc_metadata_nonevent$Collection_Start_Time_24hrs <- as.character(doc_metadata_nonevent$Collection_Start_Time_24hrs)
