--- a/processing_scripts/DOC/tmp_doc_2022/COMPASS_TEMPEST_Collate_DOC_2022_Data.Rmd
+++ b/processing_scripts/DOC/tmp_doc_2022/COMPASS_TEMPEST_Collate_DOC_2022_Data.Rmd
@@ -7,8 +7,9 @@ output: html_document
 
 ```{r}
 Sample_Year = "2022"
-Run_notes = "Samples missing from metadata: 
-TMP_ESTUARY_SOURCE_20220622_T1, TMP_ESTUARY_SOURCE_20220622_T2, TMP_FW_C3_20220520_T1, TMP_FW_E3_20220518_T1, TMP_FW_SOURCE_20220622_T6, TMP_SW_SOURCE_20220622_T6, TMP_SW_H3_20220615, TMP_C_F6_20220615, TMP_C_I5_20220718, TMP_FW_B4_20220718, TMP_SW_E3_20220808, TMP_FW_F4_20220915, TMP_C_C6_20221019"
+
+##Porewater samples that do not have metadata after checking
+no_meta_flags <- c("TMP_SW_H6_20230417", "TMP_FW_D5_20230605", "TMP_SW_H6_20230612", "TMP_C_C3_20230628", "TMP_SW_I5_20230807")
 ```
 
 ```{r setup, include=FALSE}
@@ -157,6 +158,17 @@ all_data3$Collection_Date_YYYYMMDD <- ifelse(all_data3$Sample_ID == "TMP_FW_E3_2
 all_data3$Sample_ID <- gsub("TMP_FW_E3_20220518_T1", "TMP_FW_E3_20220520_T1", all_data3$Sample_ID)
 all_data3$Collection_Date_YYYYMMDD <- ifelse(all_data3$Sample_ID == "TMP_FW_E3_20220520_T1", "20220520", all_data3$Collection_Date_YYYYMMDD)
 
+##Fix TMP_FW_B4_20220718  
+all_data3$Sample_ID <- gsub("TMP_FW_B4_20220718", "TMP_FW_B4_20220721", all_data3$Sample_ID)
+all_data3$Collection_Date_YYYYMMDD <- ifelse(all_data3$Sample_ID == "TMP_FW_B4_20220721", "20220721", all_data3$Collection_Date_YYYYMMDD)
+
+##Fix TMP_FW_F4_20220915  
+all_data3$Sample_ID <- gsub("TMP_FW_F4_20220915", "TMP_FW_F4_20220912", all_data3$Sample_ID)
+all_data3$Collection_Date_YYYYMMDD <- ifelse(all_data3$Sample_ID == "TMP_FW_F4_20220912", "20220912", all_data3$Collection_Date_YYYYMMDD)
+
+##Fix TMP_C_C6_20221019   
+all_data3$Sample_ID <- gsub("TMP_C_C6_20221019", "TMP_C_C6_20221024", all_data3$Sample_ID)
+all_data3$Collection_Date_YYYYMMDD <- ifelse(all_data3$Sample_ID == "TMP_C_C6_20221024", "20221024", all_data3$Collection_Date_YYYYMMDD)
 
 ```
 
@@ -428,7 +440,8 @@ merged_data <- merged_data %>%
 
 #Plot samples to get a first look at concentrations (sanity check)
 data_plotting <- merged_data %>%
-  subset(!is.na(Plot))
+  subset(!is.na(Plot)) %>%
+  filter(Grid != "Source")
 
 #Order by Plot from C, FW, SW
 data_plotting <- data_plotting %>% 
@@ -487,7 +500,11 @@ ggarrange(viz_doc_plot, viz_tdn_plot, nrow=2, ncol=1)
 ```{r, echo=FALSE}
 colnames(merged_data)
 
+merged_data$Collection_Start_Time_24hrs <- gsub(":00", "", merged_data$Collection_Start_Time_24hrs)
+merged_data$Collection_Start_Time_24hrs <- gsub(":", "", merged_data$Collection_Start_Time_24hrs)
+
 final_data <- merged_data %>%
+  mutate(Run_notes = ifelse(Plot %in% no_meta_flags, "Sample did not have associated metadata after checking sample sheets", NA)) %>%
   mutate(
     Depth_cm = Depth, 
     Run_notes = Run_notes, 
