--- a/processing_scripts/DOC/COMPASS_TEMPEST_DOC_Collate_AllData.Rmd
+++ b/processing_scripts/DOC/COMPASS_TEMPEST_DOC_Collate_AllData.Rmd
@@ -187,7 +187,7 @@ write.csv(metadat, "COMPASS_TEMPEST_DOC_Metadata.csv")
 
 ```
 
-## Visualize Porewater Data by Grid   
+## Visualize Porewater Data by Plot   
 ```{r Visualize Data, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
 
 ##Remove Sourcewater
@@ -251,7 +251,7 @@ ggarrange(viz_npoc_plot, viz_tdn_plot, nrow=2, ncol=1)
 
 ```
 
-## Summarized Porewater data for Site and Grid 
+## Summarized Porewater data for Plot and Collection Date
 ```{r Summarize and Visualize Data, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
 
 ##Summarize DOC by Date and Grid
