--- a/processing_scripts/Sulfate_Chloride/2024/COMPASS_TEMPEST_Collate_Dionex_2024_Data.Rmd
+++ b/processing_scripts/Sulfate_Chloride/2024/COMPASS_TEMPEST_Collate_Dionex_2024_Data.Rmd
@@ -32,7 +32,7 @@ colnames(all_data)
 final_data <- all_data %>%
     select(
          Project, Zone, Grid, Depth_cm, Event_Time, Time_of_day, Source, 
-         Volume_mL, Collection_Date, Evacuation_Date, Sample_ID, 
+         Volume_mL, Collection_Date, Evacuation_Date, Sample_ID, Collection_Start_Time_24hrs, Collection_End_Time_24hrs, EST_EDT, 
          SO4_ppm, SO4_Conc_mM, SO4_Conc_flag, SO4_QAQC_flag, Cl_ppm, Cl_Conc_mM, Cl_Conc_flag, Cl_QAQC_flag, salinity,
          Analysis_rundate,  Run_notes, Field_notes
         # list columns in the order you want them
