--- a/processing_scripts/Nutrients/2024/COMPASS_TEMPEST_NUTR_Analysis_Template_WIP.Rmd
+++ b/processing_scripts/Nutrients/2024/COMPASS_TEMPEST_NUTR_Analysis_Template_WIP.Rmd
@@ -17,10 +17,10 @@ output_dir: "To Be Reviewed/PDF"
 ```{r run information, include=TRUE}
 cat("Run Information: NAME ") #lets you know what section you're in 
 #set the run date & user name 
-  run_date <- "05/20/2025"
+  run_date <- ""
   sample_year <- "2024"
-  sample_month <- "JULY"
-  user <- "Isabelle Van Benschoten"
+  sample_month <- ""
+  user <- "Brenden Blakley"
 
 #identify the files you want to read in 
   #read in as a list to accommadate ultiple runs in a month
@@ -117,12 +117,12 @@ PO4_pe <- 0.824
 ```{r rest of metadata, include=FALSE}
 
 # #Run these to pull the TEMPEST porewater metadata into GitHub if not already there
-#  inventory_directory <- "https://docs.google.com/spreadsheets/d/1sFWq-WKhemPzbOFInqhCu_Lx0lsO6a_Z/edit#gid=496164093"
-#  
-#  drive_download(inventory_directory, overwrite = TRUE)
-#  
-#  sheet_names <- excel_sheets("TEMPEST_PorewaterInventory_May2022_Present.xlsx")
-#  sheet_names
+ # inventory_directory <- "https://docs.google.com/spreadsheets/d/1sFWq-WKhemPzbOFInqhCu_Lx0lsO6a_Z/edit#gid=496164093"
+ # 
+ # drive_download(inventory_directory, overwrite = TRUE)
+ # 
+ # sheet_names <- excel_sheets("TEMPEST_PorewaterInventory_May2022_Present.xlsx")
+ # sheet_names
 
 raw_metadata_lys <- read_excel("TEMPEST_PorewaterInventory_May2022_Present.xlsx", sheet = "Porewater - Individual", skip = 3)
 
@@ -163,7 +163,7 @@ raw_metadata_lys_monmon <- raw_metadata_lys_monmon1 %>%
   separate(
     col = Sample_ID,
     sep = "_",
-    into = c("Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Event_Time", "Time_of_day"),
+    into = c("Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Event_Time", "Time_of_day"), #Warning is okay
     remove = FALSE)
 
 #combine event and non-event samples 
@@ -219,7 +219,7 @@ raw_metadata_sw_sw <- raw_metadata_sw_sw %>%
 raw_metadata_sw_combined <- rbind(raw_metadata_sw_rw, raw_metadata_sw_sw)
 raw_metadata_sw_combined <- raw_metadata_sw_combined %>%
   rename("Notes" = "Notes:") %>%
-  select("Sample_ID", "Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Event_Time", "Time_of_day", "Volume_mL", "Notes")
+  dplyr::select("Sample_ID", "Project", "Zone", "Source" ,"Grid", "Depth", "Analyte", "Collection_Date", "Event_Time", "Time_of_day", "Volume_mL", "Notes")
 
 #change "Source" to "Sourcewater" 
 raw_metadata_sw_combined$Source <- replace(raw_metadata_sw_combined$Source, raw_metadata_sw_combined$Source == "Source", "SourceWater")
@@ -268,7 +268,7 @@ df_combo <- bind_rows(data_NOx, data_NH3_PO4)
 
 # Rename columns
 df1 <- df_combo %>%
-  select(Sample_Name = 4,
+  dplyr::select(Sample_Name = 4,
          Run_Number = 5,
          Conc = 6,
          Absorbance = 7,
@@ -392,6 +392,8 @@ Curves_Plot
 
 R2_Flags <- R2_Check %>% dplyr::select(Test, Run_Date, R2_Flag, R2)
 
+R2_Flags_join <- R2_Flags %>% dplyr::select(Test, Run_Date, R2_Flag)
+
 knitr::kable(R2_Flags)
 
 
@@ -402,17 +404,19 @@ knitr::kable(R2_Flags)
 
 #log <- tibble(Test = c(), Intercept= c(), Slope= c(), Quadratic= c(), Run_Date= c(), User= c())
 
-old_log <- read.csv(file_path)
+old_log <- read.csv(file_path) %>% mutate(Run_Date = as.Date(as.character(Run_Date), tryFormats = c("%m/%d/%Y", "%Y-%m-%d")))
 
 add_log <- R2_Check %>% dplyr::select(Test, Run_Date, R2, Slope, Intercept, Quadratic) %>%
   mutate(Test = case_when(
     Test == "Ammonia 2" ~ "NH3",
     Test == "Vanadium NOx" ~ "NOx",
     Test == "o-PHOS 0.3" ~ "PO4"
-  ))
+  )) %>% mutate(Run_Date = as.Date(as.character(Run_Date), format = "%m/%d/%Y")) %>% mutate(User = user)
 
-new_log <- 
-#write.csv(log, "Raw Data/Log_NUTR_WIP.csv")
+
+new_log <- rbind(old_log, add_log) %>% mutate(across(where(is.numeric), \(x) round(x, digits = 4))) %>% distinct()
+
+write.csv(new_log, "Raw Data/SEAL_TEMPEST_QAQC_Log_2024.csv", row.names = FALSE)
 
 ```
 
@@ -759,6 +763,8 @@ PE_NH3_flag_disp <- NH3_peChk %>% dplyr::select(Test, Run_Date, NH3_pe_flag, Mea
 
 PE_Flag_disp <- rbind(PE_PO4_flag_disp, PE_NOx_flag_disp,PE_NH3_flag_disp)
 
+PE_Flag_join <- PE_Flag_disp %>% dplyr::select(Test, Run_Date, PE_Flag) %>% mutate(PE_Flag = ifelse(PE_Flag %ilike% "YES", "PE Check PASS", "PE Check FAIL"))
+
 knitr::kable(PE_Flag_disp)
 
 #flag write out 
@@ -795,11 +801,8 @@ red_eff_1 <- df_all %>%
 
 red_eff <- red_eff_1 %>% group_by(Run_Date) %>% mutate(Eff_Percent = (Conc / 0.5)*100, Eff_Flag = ifelse(Eff_Percent >= 90, 'YES', 'NO, rerun'))
 
-red_eff <- red_eff %>%
-  mutate(row_num = row_number())
-
 #Plot these efficencies 
-red_effs_plot <-  ggplot(data = red_eff, aes(x = Sample_Name, y = Conc, fill=Eff_flag)) +
+red_effs_plot <-  ggplot(data = red_eff, aes(x = Sample_Name, y = Conc, fill=Eff_Flag)) +
        geom_bar(stat = 'identity') + 
        facet_wrap(.~Run_Date, scale = "free_x") +
        scale_fill_manual(values = c("YES" = "darkgreen", "NO, rerun" = "darkred")) +
@@ -812,7 +815,15 @@ red_effs_plot <-  ggplot(data = red_eff, aes(x = Sample_Name, y = Conc, fill=Eff
 print(red_effs_plot)
 
 #create a flag 
-NOx_mean_red_eff <- mean(red_eff$Eff_Percent)
+Red_Eff_2 <- red_eff %>% group_by(Run_Date) %>% mutate(Mean_RedEff = mean(Eff_Percent)) %>% ungroup() %>% distinct()
+
+Red_Eff_disp <- Red_Eff_2 %>% mutate(Red_Eff_Flag = ifelse(Mean_RedEff >= 95,
+       "Mean NOx Reduction Efficiency >95% - PROCEED",
+       "Mean NOx Reduction Efficiency <95% - REASSESS")) %>% dplyr::select(Test, Run_Date, Red_Eff_Flag)
+
+Red_Eff_join <- Red_Eff_disp
+
+knitr::kable(Red_Eff_disp)
 
 #report out if flags indicate need for rerun and what the value is
 ifelse(NOx_mean_red_eff >= 95,
@@ -820,12 +831,13 @@ ifelse(NOx_mean_red_eff >= 95,
        "Mean NOx Reduction Efficiency <95% - REASSESS")
 print(NOx_mean_red_eff)
 
-#write out a flag to the sample dataframe if red eff is low
-if (NOx_mean_red_eff <= 95) {
-    df_all$NOx_flag <- ifelse(
-    df_all$NOx_flag != "",
-    paste0(df_all$NOx_flag, "; NOx reduction efficiency low"),
-    "NOx reduction efficiency low")}
+
+
+# if (NOx_mean_red_eff <= 95) {
+#     df_all$NOx_flag <- ifelse(
+#     df_all$NOx_flag != "",
+#     paste0(df_all$NOx_flag, "; NOx reduction efficiency low"),
+#     "NOx reduction efficiency low")}
 
 ```
 
@@ -942,13 +954,15 @@ chks_plot
 # print(Chk_Std_Plots)
 
 #calculate the percent of check standards that are within the range based on the flag 
-NOx_chks_percent <- (sum(NOx_chks$NOx_diff_flag == "YES")/nrow(NOx_chks))*100
-NH3_chks_percent <- (sum(NH3_chks$NH3_diff_flag == "YES")/nrow(NH3_chks))*100
-PO4_chks_percent <- (sum(PO4_chks$PO4_diff_flag == "YES")/nrow(PO4_chks))*100
+# NOx_chks_percent <- (sum(NOx_chks$NOx_diff_flag == "YES")/nrow(NOx_chks))*100
+# NH3_chks_percent <- (sum(NH3_chks$NH3_diff_flag == "YES")/nrow(NH3_chks))*100
+# PO4_chks_percent <- (sum(PO4_chks$PO4_diff_flag == "YES")/nrow(PO4_chks))*100
 
 Chks_flag_disp <- Chks_diff %>% group_by(Test, Run_Date) %>% mutate(Percent = 100*length(which(Diff_Flag == "YES"))/length(Diff_Flag)) %>% mutate(CHK_Flag = ifelse(Percent >= chks_flag, ">60% of Checks Pass - PROCEED", "<60% of Checks Pass - REASSESs")) %>% ungroup() %>% dplyr::select(Test, Run_Date, CHK_Flag) %>% distinct()
 
 knitr::kable(Chks_flag_disp)
+
+Chks_Flag_join <- Chks_flag_disp
 
 #report out if flags indicate need for rerun
 # ifelse(NOx_chks_percent >= chks_flag, 
@@ -963,29 +977,29 @@ knitr::kable(Chks_flag_disp)
 # 
 
 #write out a flag to the sample dataframe if less than 60% of the checks are within the expected CV
-if (NOx_chks_percent <= chks_flag) {
-    df_all_cor$NOx_flag <- ifelse(
-    df_all_cor$NOx_flag != "",
-    paste0(df_all_cor$NOx_flag, "; NOx checks out of range"),
-    "NOx checks out of range"
-  )
-}
-
-if (NH3_chks_percent <= chks_flag) {  
-    df_all_cor$NH3_flag <- ifelse(
-    df_all_cor$NH3_flag != "",
-    paste0(df_all_cor$NH3_flag, "; NH3 checks out of range"),
-    "NH3 checks out of range"
-  )
-}
-
-if (PO4_chks_percent <= chks_flag) {  
-    df_all_cor$PO4_flag <- ifelse(
-    df_all_cor$PO4_flag != "",
-    paste0(df_all_cor$PO4_flag, "; PO4 checks out of range"),
-    "PO4 checks out of range"
-  )
-}
+# if (NOx_chks_percent <= chks_flag) {
+#     df_all_cor$NOx_flag <- ifelse(
+#     df_all_cor$NOx_flag != "",
+#     paste0(df_all_cor$NOx_flag, "; NOx checks out of range"),
+#     "NOx checks out of range"
+#   )
+# }
+# 
+# if (NH3_chks_percent <= chks_flag) {  
+#     df_all_cor$NH3_flag <- ifelse(
+#     df_all_cor$NH3_flag != "",
+#     paste0(df_all_cor$NH3_flag, "; NH3 checks out of range"),
+#     "NH3 checks out of range"
+#   )
+# }
+# 
+# if (PO4_chks_percent <= chks_flag) {  
+#     df_all_cor$PO4_flag <- ifelse(
+#     df_all_cor$PO4_flag != "",
+#     paste0(df_all_cor$PO4_flag, "; PO4 checks out of range"),
+#     "PO4 checks out of range"
+#   )
+# }
 
 
 
@@ -1033,6 +1047,8 @@ blks_flagged <- blks_all %>% mutate(BLK_Flag = ifelse(Conc <= Quant, "YES", "NO,
 blks_disp <- blks_flagged%>% group_by(Test, Run_Date) %>% mutate(Mean_Blk_Conc = mean(Conc)) %>% dplyr::select(Test, Run_Date, BLK_Pct_Flag, Mean_Blk_Conc, Quant) %>%  rename(Quantile_25 = Quant) %>% distinct()
 
 knitr::kable(blks_disp)
+
+Blks_Flag_join <- blks_disp %>% dplyr::select(Test, Run_Date, BLK_Pct_Flag)
 
 #Calculating the lowest 25% of sample concentrations to compare to the blank concentrations
 # NOx_only <- samples %>%
@@ -1187,6 +1203,9 @@ Dup_Plot
 Flags_Duplicates <- Dup_plot_df %>% group_by(Run_Date, Test) %>% mutate(Dup_Flags = ifelse(length(which(Dup_Flag == "YES"))/(length(Dup_Flag)) >= 0.6,  ">60% of Dups Pass - PROCEED", "<60% of Dups Pass - REASSESS")) %>% ungroup() %>% dplyr::select(Test, Run_Date, Dup_Flags) %>% distinct()
 
 knitr::kable(Flags_Duplicates)
+
+Dup_Flags_join <- Flags_Duplicates
+
 
 # #Getting dataframe of just duplicated samples
 # df_NOx_dup <- df_all_cor %>%
@@ -1444,6 +1463,8 @@ Spike_Plot
 Flags_Spike <- Spike_plot_df %>% group_by(Run_Date, Test) %>% mutate(Spike_Flags = ifelse(length(which(Spike_Flag == "YES"))/(length(Spike_Flag)) >= 0.6,  ">60% of Spikes have a CV <50% - PROCEED", ">60% of Spikes have a CV <50% - REASSESS")) %>% ungroup() %>% dplyr::select(Test, Run_Date, Spike_Flags) %>% distinct()
 
 knitr::kable(Flags_Spike)
+
+Spk_Flags_join <- Flags_Spike
 
 #getting spikes and samples pulled 
 # df_NOx_spk <- df_all_cor %>%
@@ -1721,6 +1742,8 @@ Spike_Plot
 
 Flags_Matrix <- Spike_plot_df %>% group_by(Run_Date, Test) %>% mutate(Matrix_Flags = ifelse(length(which(Spike_Flag == "YES"))/(length(Spike_Flag)) >= 0.6,  "Matrix Has CV <50% - PROCEED", "Matrix Has CV >50% - REASSESS")) %>% ungroup() %>% dplyr::select(Test, Run_Date, Matrix_Flags) %>% distinct()
 
+Matrix_Flags_join <- Flags_Matrix
+
 # df_matrix <- df_spk_combo%>%
 #   filter(str_detect(Pair_ID, "Abs_Chk")) 
 # 
@@ -1815,7 +1838,7 @@ head(samples)
 cat("Sample Flagging")
 
 #Flagging data if the concentration is outside the standards range 
-samples_flagged <- samples %>%
+samples_flagged1 <- samples %>%
   mutate(
     Conc_flag = case_when(
       Test == "Vanadium NOx" & Conc/Dilution < NOx_dl ~ "bdl",
@@ -1836,24 +1859,25 @@ samples_flagged <- samples %>%
 
 ```
 
-## Pull out sample id information 
-```{r Sample Identification, echo=FALSE}
+#Add QAQC Flags
+```{r}
+Flags_1 <- left_join(R2_Flags_join, PE_Flag_join, by = join_by(Test, Run_Date))
 
-cat("Sample Processing")
+Flags_2 <- left_join(Flags_1, Red_Eff_join, by = join_by(Test, Run_Date) )
 
-samples_flagged <- samples_flagged %>%
-  filter(str_detect(Sample_Name, "GCW|GWI|MSM|SWH")) %>%
-  filter(!str_detect(Sample_Name, "RHZ|PPR")) %>% 
-  mutate(Run_Time = lubridate::mdy_hm(Run_Time)) %>%
-  separate(
-    col = Sample_Name,
-    sep = "_",
-    into = c("Site", "Samp_Time", "Zone", "Replicate", "Depth"),
-    remove = FALSE) %>%
-  mutate(Samp_Time = ym(Samp_Time))
+Flags_3 <- left_join(Flags_2, Chks_Flag_join, by = join_by(Test, Run_Date) )
 
+Flags_4 <- left_join(Flags_3, Blks_Flag_join, by = join_by(Test, Run_Date) )
 
+Flags_5 <- left_join(Flags_4, Spk_Flags_join, by = join_by(Test, Run_Date) )
 
+Flags_6 <- left_join(Flags_5, Dup_Flags_join, by = join_by(Test, Run_Date) )
+  
+Flags_joined <- left_join(Flags_6, Matrix_Flags_join, by = join_by(Test, Run_Date) )
+
+Flags_Bad <- Flags_joined %>% mutate(across(!1:2, \(x) ifelse(x %ilike% "PROCEED" | x %ilike% "PASS", "", x))) %>% distinct()
+
+Flags_Fin <- Flags_Bad %>% mutate(QAQC_Flag = paste0(R2_Flag, PE_Flag, Red_Eff_Flag, CHK_Flag, BLK_Pct_Flag, Dup_Flags, Spike_Flags, Matrix_Flags)) %>% dplyr::select(Test, Run_Date, Flags)
 ```
 
 ## Check to see if samples run match metadata & merge info
@@ -1862,7 +1886,7 @@ samples_flagged <- samples_flagged %>%
 cat("Check Sample IDs with Metadata")
 
 #check to see if all samples are present in the metadata 
-all_present <- all(samples_flagged$Sample_Name %in% nutr_metadata$NUTR_ID)
+all_present <- all(samples_flagged1$Sample_Name %in% nutr_metadata$NUTR_ID)
 
 if (all_present) {
   message("All sample IDs are present in metadata.")
@@ -1870,26 +1894,55 @@ if (all_present) {
   message("Some sample IDs are missing from metadata.")
   
   # Optional: Which ones are missing?
-  missing_ids <- setdiff(samples_flagged$Sample_Name, nutr_metadata$NUTR_ID)
+  missing_ids <- setdiff(samples_flagged1$Sample_Name, nutr_metadata$NUTR_ID)
   print(missing_ids)
 }
-
-nutr_metadata_selected <- nutr_metadata %>%
-  select(NUTR_ID, Year, Month, Day, Depth_cm, Lysimeter, Time..24hr., Time.Zone_EDT.EST,  Field.Notes) 
+colnames(samples_flagged1)
+samples_flagged_selected <- samples_flagged1 %>%
+  dplyr::select(-c(Pair_ID)) 
 
 #merge metadata with sample run data 
-merged_data <- samples_flagged %>%
-  left_join(nutr_metadata_selected, by = c("Sample_Name" = "NUTR_ID"))
+df_all_clean <- samples_flagged_selected %>%
+  left_join(nutr_metadata, by = c("Sample_Name" = "NUTR_ID")) %>% dplyr::select(Sample_Name, Test, Conc, Conc_uM, Conc_flag, Run_Date) %>% left_join(Flags_Fin, by = join_by(Test, Run_Date))
 
-df_all_clean <- merged_data %>%
-  #filter(str_detect(Sample_Name, "GCW|GWI|MSM|SWH")) %>%
-  #mutate(Run_Time = lubridate::mdy_hm(Run_Time)) %>%
-  separate(
-    col = Sample_Name,
-    sep = "_",
-    into = c("Site", "Samp_Time", "Zone", "Replicate", "Depth"),
-    remove = FALSE) %>%
-  mutate(Samp_Time = ym(Samp_Time)) 
+```
+
+
+
+## Check to see if samples run match metadata & merge info
+```{r check sample ids with metadata, echo=FALSE}
+
+cat("Check Sample IDs with Metadata")
+# 
+# #check to see if all samples are present in the metadata 
+# all_present <- all(samples_flagged$Sample_Name %in% nutr_metadata$NUTR_ID)
+# 
+# if (all_present) {
+#   message("All sample IDs are present in metadata.")
+# } else {
+#   message("Some sample IDs are missing from metadata.")
+#   
+#   # Optional: Which ones are missing?
+#   missing_ids <- setdiff(samples_flagged$Sample_Name, nutr_metadata$NUTR_ID)
+#   print(missing_ids)
+# }
+# 
+# nutr_metadata_selected <- nutr_metadata %>%
+#   dplyr::select(NUTR_ID, Month, Day, Depth_cm, Lysimeter, Time..24hr., Time.Zone_EDT.EST,  Field.Notes) 
+# 
+# #merge metadata with sample run data 
+# merged_data <- samples_flagged %>%
+#   left_join(nutr_metadata_selected, by = c("Sample_Name" = "NUTR_ID"))
+# 
+# df_all_clean <- merged_data %>%
+#   #filter(str_detect(Sample_Name, "GCW|GWI|MSM|SWH")) %>%
+#   #mutate(Run_Time = lubridate::mdy_hm(Run_Time)) %>%
+#   separate(
+#     col = Sample_Name,
+#     sep = "_",
+#     into = c("Site", "Samp_Time", "Zone", "Replicate", "Depth"),
+#     remove = FALSE) %>%
+#   mutate(Samp_Time = ym(Samp_Time)) 
 
 
 ```
@@ -1897,93 +1950,93 @@ df_all_clean <- merged_data %>%
 \newpage
 
 ## Visualize Data
-```{r Visualize Data, echo=FALSE}
-cat("Visualize Data")
+# ```{r Visualize Data, echo=FALSE}
+# cat("Visualize Data")
+# 
+# ### Nitrite + Nitrate 
+# 
+# NOx_forplot <- df_all_clean %>%
+#   filter(Test == "Vanadium NOx")
+# 
+# #group the data for plotting
+# NOx_forplot <- NOx_forplot %>%
+#   group_by(Site) %>%
+#   mutate(row_num = factor(row_number())) %>%  # create row_num as factor per group
+#   ungroup()
+# 
+# viz_NOx_plot <-  ggplot(data = NOx_forplot, aes(x = factor(row_num), y = Conc, fill=Zone)) +
+#        geom_bar(stat = "identity", position = position_dodge2(preserve = "single"), 
+#                  color="black") +
+#        facet_grid(~ Site, scales="free_x") +
+#         scale_fill_manual(values = c("UP" = "#20063B", 
+#                                      "TR" = "#FFBC42", 
+#                                      "SWAMP" = "darkgrey",
+#                                      "WC" = "#419973", 
+#                                      "SW" = "#25ABE6")) +
+#         theme_classic() + 
+#         labs(x= " ", y="NOx (mg/L)", title="Porewater NOx") + 
+#           theme(legend.position = "none") +
+#           scale_x_discrete(drop = TRUE)+
+#         theme(axis.text.x = element_text(angle = 90, hjust = 0.5))
+# 
+# ### Ammonia 
+# 
+# NH3_forplot <- df_all_clean %>%
+#   filter(Test == "Ammonia 2")
+# 
+# #group the data for plotting
+# NH3_forplot <- NH3_forplot %>%
+#   group_by(Site) %>%
+#   mutate(row_num = factor(row_number())) %>%  # create row_num as factor per group
+#   ungroup()
+# 
+# viz_NH3_plot <- ggplot(data = NH3_forplot, aes(x = factor(row_num), y = Conc, fill=Zone)) +
+#        geom_bar(stat = "identity", position = position_dodge2(preserve = "single"), 
+#                  color="black") + 
+#        facet_grid(~ Site, scales="free_x") +
+#         scale_fill_manual(values = c("UP" = "#20063B", 
+#                                      "TR" = "#FFBC42", 
+#                                      "SWAMP" = "darkgrey",
+#                                      "WC" = "#419973", 
+#                                      "SW" = "#25ABE6")) +
+#         theme_classic() + 
+#         labs(x= " ", y="NH3 (mg/L)", title="Porewater NH3") + 
+#           theme(legend.position = "none") +
+#           scale_x_discrete(drop = TRUE)+
+#         theme(axis.text.x = element_text(angle = 90, hjust = 0.5))
+# 
+# ### Phosphate 
+# 
+# PO4_forplot <- df_all_clean %>%
+#   filter(Test == "o-PHOS 0.3")
+# 
+# #group the data for plotting
+# PO4_forplot <- PO4_forplot %>%
+#   group_by(Site) %>%
+#   mutate(row_num = factor(row_number())) %>%  # create row_num as factor per group
+#   ungroup()
+# 
+# viz_PO4_plot <- ggplot(data = PO4_forplot, aes(x = factor(row_num), y = Conc, fill=Zone)) +
+#        geom_bar(stat = "identity", position = position_dodge2(preserve = "single"), 
+#                  color="black") + 
+#        facet_grid(~ Site, scales="free_x") +
+#         scale_fill_manual(values = c("UP" = "#20063B", 
+#                                      "TR" = "#FFBC42", 
+#                                      "SWAMP" = "darkgrey",
+#                                      "WC" = "#419973", 
+#                                      "SW" = "#25ABE6")) +
+#         theme_classic() + 
+#         labs(x= " ", y="PO4 (mg/L)", title="Porewater PO4") + 
+#           theme(legend.position = "none") +
+#           scale_x_discrete(drop = TRUE)+
+#         theme(axis.text.x = element_text(angle = 90, hjust = 0.5))
+# 
+# 
+# print(viz_NOx_plot)
+# print(viz_NH3_plot) 
+# print(viz_PO4_plot)
 
-### Nitrite + Nitrate 
-
-NOx_forplot <- df_all_clean %>%
-  filter(Test == "Vanadium NOx")
-
-#group the data for plotting
-NOx_forplot <- NOx_forplot %>%
-  group_by(Site) %>%
-  mutate(row_num = factor(row_number())) %>%  # create row_num as factor per group
-  ungroup()
-
-viz_NOx_plot <-  ggplot(data = NOx_forplot, aes(x = factor(row_num), y = Conc, fill=Zone)) +
-       geom_bar(stat = "identity", position = position_dodge2(preserve = "single"), 
-                 color="black") +
-       facet_grid(~ Site, scales="free_x") +
-        scale_fill_manual(values = c("UP" = "#20063B", 
-                                     "TR" = "#FFBC42", 
-                                     "SWAMP" = "darkgrey",
-                                     "WC" = "#419973", 
-                                     "SW" = "#25ABE6")) +
-        theme_classic() + 
-        labs(x= " ", y="NOx (mg/L)", title="Porewater NOx") + 
-          theme(legend.position = "none") +
-          scale_x_discrete(drop = TRUE)+
-        theme(axis.text.x = element_text(angle = 90, hjust = 0.5))
-
-### Ammonia 
-
-NH3_forplot <- df_all_clean %>%
-  filter(Test == "Ammonia 2")
-
-#group the data for plotting
-NH3_forplot <- NH3_forplot %>%
-  group_by(Site) %>%
-  mutate(row_num = factor(row_number())) %>%  # create row_num as factor per group
-  ungroup()
-
-viz_NH3_plot <- ggplot(data = NH3_forplot, aes(x = factor(row_num), y = Conc, fill=Zone)) +
-       geom_bar(stat = "identity", position = position_dodge2(preserve = "single"), 
-                 color="black") + 
-       facet_grid(~ Site, scales="free_x") +
-        scale_fill_manual(values = c("UP" = "#20063B", 
-                                     "TR" = "#FFBC42", 
-                                     "SWAMP" = "darkgrey",
-                                     "WC" = "#419973", 
-                                     "SW" = "#25ABE6")) +
-        theme_classic() + 
-        labs(x= " ", y="NH3 (mg/L)", title="Porewater NH3") + 
-          theme(legend.position = "none") +
-          scale_x_discrete(drop = TRUE)+
-        theme(axis.text.x = element_text(angle = 90, hjust = 0.5))
-
-### Phosphate 
-
-PO4_forplot <- df_all_clean %>%
-  filter(Test == "o-PHOS 0.3")
-
-#group the data for plotting
-PO4_forplot <- PO4_forplot %>%
-  group_by(Site) %>%
-  mutate(row_num = factor(row_number())) %>%  # create row_num as factor per group
-  ungroup()
-
-viz_PO4_plot <- ggplot(data = PO4_forplot, aes(x = factor(row_num), y = Conc, fill=Zone)) +
-       geom_bar(stat = "identity", position = position_dodge2(preserve = "single"), 
-                 color="black") + 
-       facet_grid(~ Site, scales="free_x") +
-        scale_fill_manual(values = c("UP" = "#20063B", 
-                                     "TR" = "#FFBC42", 
-                                     "SWAMP" = "darkgrey",
-                                     "WC" = "#419973", 
-                                     "SW" = "#25ABE6")) +
-        theme_classic() + 
-        labs(x= " ", y="PO4 (mg/L)", title="Porewater PO4") + 
-          theme(legend.position = "none") +
-          scale_x_discrete(drop = TRUE)+
-        theme(axis.text.x = element_text(angle = 90, hjust = 0.5))
-
-
-print(viz_NOx_plot)
-print(viz_NH3_plot) 
-print(viz_PO4_plot)
-
-```
+#```
 
 ## Export Processed Data
 ```{r Export Processed Data, include=FALSE}
@@ -2015,20 +2068,22 @@ final_data3 <- df_all_clean %>%
     names_glue = "{Test}_Conc_flag"
   )
 
-#take out only the columns we want to merge 
-df_all_clean_cols <- df_all_clean %>%
-  select(Sample_Name, Site, Zone, Depth, Depth_cm, Lysimeter,
-         Year, Month, Day, Time..24hr., Time.Zone_EDT.EST,
-         NOx_flag, NH3_flag, PO4_flag, 
-         Field.Notes)
+final_data4 <- df_all_clean %>%
+  pivot_wider(
+    id_cols = Sample_Name,
+    names_from = Test,
+    values_from = Flags,
+    names_glue = "{Test}_Conc_flag"
+  )
 
-df_all_clean_cols_one_row <- df_all_clean_cols %>%
+#Select only one Sample ID
+df_all_clean_cols_one_row <- df_all_clean %>%
   group_by(Sample_Name) %>%
   slice(1) %>%  # or use summarise() if you want to aggregate
   ungroup()
 
 #merge these together
-data_list <- list(df_all_clean_cols_one_row, final_data1, final_data2, final_data3)
+data_list <- list(df_all_clean_cols_one_row, final_data1, final_data2, final_data3, final_data4)
 
 final_data4 <- reduce(data_list, full_join, by = c("Sample_Name"))
 
@@ -2036,25 +2091,23 @@ final_data4 <- reduce(data_list, full_join, by = c("Sample_Name"))
 #Add project information 
 final_data_labeled <- final_data4 %>% 
   mutate(
-    Project = "COMPASS: Synoptic",   # new column with same value on every row
-    Region = "CB",
+    Site = "TEMPEST",   # new column with same value on every row
     Run_notes = run_notes, 
     Analysis_rundate = print(run_date)# new column with notes about the run
   ) 
 
 #Prepare data to be exported 
 final_data <- final_data_labeled %>%
+  mutate(
+    Depth_cm = gsub("cm", "", Depth)
+  ) %>%
     rename(
-    Site = Site,
     Sample_ID = Sample_Name, 
-    Time = Time..24hr., 
-    Time_Zone = Time.Zone_EDT.EST,
-    Replicate = Lysimeter,
-    
-    NOx_Conc_mgL = `Vanadium NOx_Conc`,
-    NOx_Conc_uM = `Vanadium NOx_Conc_uM`,
-    NOx_Conc_Flag = `Vanadium NOx_Conc_flag`,
-    NOx_QAQC_Flag = NOx_flag,
+  
+    # NOx_Conc_mgL = `Vanadium NOx_Conc`,
+    # NOx_Conc_uM = `Vanadium NOx_Conc_uM`,
+    # NOx_Conc_Flag = `Vanadium NOx_Conc_flag`,
+    # NOx_QAQC_Flag = NOx_flag,
     
     NH3_Conc_mgL = `Ammonia 2_Conc`,
     NH3_Conc_uM = `Ammonia 2_Conc_uM`,
@@ -2066,19 +2119,20 @@ final_data <- final_data_labeled %>%
     PO4_Conc_Flag =`o-PHOS 0.3_Conc_flag`,
     PO4_QAQC_Flag = PO4_flag,
     
-    Field_notes = Field.Notes
+    Field_notes = Notes, 
+    Evacuation_Date = Evacuation_date_YYYMMDD
     # add more rename pairs as needed
   ) %>%
-  select(Project, Region, Site, Zone, Replicate, Depth_cm, 
-         Sample_ID, Year, Month, Day, Time, Time_Zone,
-         NOx_Conc_mgL, NOx_Conc_uM, NOx_Conc_Flag, NOx_QAQC_Flag,
+  select(Sample_ID, Site, Zone, Grid, Depth_cm, Event_Time, Time_of_day, 
+         Source, Volume_mL, Collection_Date, Evacuation_Date, 
+          NOx_Conc_mgL, NOx_Conc_uM, NOx_Conc_Flag, NOx_QAQC_Flag,
          NH3_Conc_mgL, NH3_Conc_uM, NH3_Conc_Flag, NH3_QAQC_Flag,
          PO4_Conc_mgL, PO4_Conc_uM, PO4_Conc_Flag, PO4_QAQC_Flag,
          Analysis_rundate,  Run_notes, Field_notes)
 
 
 #Write out data frame 
-  write.csv(final_data, final_path)
+write.csv(final_data, final_path)
   
 
 ```
