--- a/processing_scripts/Sulfate_Chloride/2024/COMPASS_TEMPEST_PW_SO4_Cl_202404-202412.Rmd
+++ b/processing_scripts/Sulfate_Chloride/2024/COMPASS_TEMPEST_PW_SO4_Cl_202404-202412.Rmd
@@ -230,7 +230,8 @@ raw_metadata_sw_combined <- raw_metadata_sw_combined %>%
                           Zone,
                           Source, 
                           Collection_Date, 
-                          sep = "_"))
+                          sep = "_")) %>%
+  rename(Collection_End_Time_24hrs = Collection_Time_24hrs)
 
 
 #combine porewater and sourcewater samples
