--- a/processing_scripts/Sulfate_Chloride/COMPASS_TEMPEST_SO4_Cl_Collate_AllData.Rmd
+++ b/processing_scripts/Sulfate_Chloride/COMPASS_TEMPEST_SO4_Cl_Collate_AllData.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "TEMPEST: Porewater SO4/Cl"
-author: "2024-2025 Samples"
+author: "2023-2025 Samples"
 date: "`r Sys.Date()`"
 output: 
   pdf_document:
@@ -51,34 +51,40 @@ raw_dat$Year <- format(raw_dat$Collection_Date_formatted, format = "%Y")
 raw_dat$Month <- format(raw_dat$Collection_Date_formatted, format = "%m")
 raw_dat$Day <- format(raw_dat$Collection_Date_formatted, format = "%d")
 
+raw_dat$Grid <- gsub("Source", "Sourcewater", raw_dat$Grid)
+raw_dat$Grid <- gsub("SOURCEWATER", "Sourcewater", raw_dat$Grid)
+raw_dat$Grid <- gsub("RAINWATER", "Rainwater", raw_dat$Grid)
 
 all_dat <- raw_dat %>%
   mutate(
-    Project = "TEMPEST"
+    Project = "COMPASS", 
+    Site = "TEMPEST"
   ) %>%
   rename(
     SO4_mM = SO4_Conc_mM, 
-    Cl_mM = Cl_Conc_mM
+    Cl_mM = Cl_Conc_mM, 
   )%>%
   dplyr::select(
-         Project, Sample_ID, Year, Month, Day, 
-         Event_Time, Time_of_day, Source, 
-         Volume_mL, Collection_Date, Evacuation_Date, 
-         SO4_ppm, SO4_mM, SO4_Conc_flag, SO4_QAQC_flag, Cl_ppm, Cl_mM, Cl_Conc_flag, Cl_QAQC_flag, salinity,
-         Analysis_rundate,  Run_notes, Field_notes
+         Project, Site, Plot, Grid, Depth_cm, Event_Time, Time_of_day, Sample_ID, 
+         Volume_mL, Evacuation_date_YYYMMDD, Collection_Date_YYYYMMDD, 
+         Collection_Start_Time_24hrs, Collection_End_Time_24hrs, EST_EDT, 
+         SO4_ppm, SO4_mM, SO4_Conc_flag, SO4_QAQC_flag, Cl_ppm, Cl_mM, Cl_Conc_flag, Cl_QAQC_flag, 
+         salinity, Analysis_rundate,  Run_notes, Field_notes
         # list columns in the order you want them
   )
 
 
 ##Set 4 decimal points max
 all_dat <- all_dat %>%
-  mutate(across(where(is.numeric), round, digits = 4)) ##This does make all salnities 0 when Cl_ppm is 0 instead of 0.000026
+  mutate(across(where(is.numeric), round, digits = 4)) ##This does make all salinities 0 when Cl_ppm is 0 instead of 0.000026
 
 ```
 
 
 ##Make Relevant Metadata Sheet
 ```{r make metadata, include = FALSE}
+
+colnames(all_dat)
 
 #pull the column names from the all_dat dataframe and create a new dataframe with them 
 metadat <- data.frame(Column_Names = colnames(all_dat))
@@ -91,16 +97,20 @@ metadat$Instrument_ifapplicable <- ""
 #add information about each line: 
 
 metadat$Description <- c("Project name", 
-                         "Sample Identifier", 
-                         "Year of sample collection", 
-                         "Month of sample collection", 
-                         "Day of sample collection", 
+                         "Site where sample collected", 
+                         "Plot where sample collected (SW = Saltwater, FW = Freshwater, C = 
+                         Control, Estuary (Sourcewater))", 
+                         "Grid where sample collected (Letter + Number)", 
+                         "Depth where sample collected", 
                          "Event sampling time (T1 through T6)", 
                          "Time of day of sample collection (AM, PM, Midday)",
-                         "Source of sample (PW=Porewater, Sourcewater, Rainwater",
+                         "Sample Identifier", 
                          "Volume of sample collected (mL)", 
-                         "Date of sample collection", 
-                         "Date of sample evacuation", 
+                         "Date lysimeter evacuated", 
+                         "Date sample collected", 
+                         "Time lysimeter evacuated", 
+                         "Time sample collected", 
+                         "Time zone of sample collection", 
                          "Sulfate concentration in ppm", 
                          "Sulfate concentration in mM", 
                          "Sulfate concentration flag base on standard curve (bdl=below detection limit (0), adl=above detection limit (highest   
@@ -117,14 +127,17 @@ metadat$Description <- c("Project name",
                          "Notes generated during field sample collection")
 
 metadat$Units <-       c("NA", 
-                         "NA",
                          "NA", 
                          "NA",
                          "NA",
                          "NA", 
                          "NA",
                          "NA",
+                         "NA", 
                          "mL", 
+                         "NA",
+                         "NA",
+                         "NA",
                          "NA",
                          "NA",
                          "ppm", 
@@ -143,6 +156,9 @@ metadat$Units <-       c("NA",
 metadat$Instrument_ifapplicable <-  
   
                        c("NA", 
+                         "NA",
+                         "NA", 
+                         "NA", 
                          "NA",
                          "NA", 
                          "NA",
@@ -186,31 +202,31 @@ write.csv(metadat, "COMPASS_TEMPEST_SO4_Cl_Metadata.csv")
 
 ##Remove Sourcewater
 data_plotting <- raw_dat %>%
-  filter(!str_detect(Source, "SourceWater")) %>%
-  filter(!str_detect(Source, "Rainwater")) 
+  filter(!str_detect(Grid, "Sourcewater"), ignore.case = TRUE)%>%
+  filter(!str_detect(Grid, "Rainwater"), ignore.case = TRUE)
 
 data_plotting <- data_plotting %>% 
     mutate(
-    Zone_1 = case_when(
-      Zone == "C" ~ "Control",
-      Zone == "FW" ~ "Freshwater",
-      Zone == "SW" ~ "Saltwater",
-      TRUE ~ Zone  # keep everything else unchanged
+    plot_1 = case_when(
+      Plot == "C" ~ "Control",
+      Plot == "FW" ~ "Freshwater",
+      Plot == "SW" ~ "Saltwater",
+      TRUE ~ Plot  # keep everything else unchanged
     )
   ) %>%
-  mutate(Zone_1 = factor(Zone_1, levels = c("Control", "Freshwater", "Saltwater")))
+  mutate(plot_1 = factor(plot_1, levels = c("Control", "Freshwater", "Saltwater")))
 
 #Plot data by year and change colors based on Zone:
-viz_cl_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = Cl_ppm, fill = Zone_1)) +
+viz_cl_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = Cl_ppm, fill = plot_1)) +
   geom_bar(stat = "identity", position = position_dodge2(preserve = "total")) +
-  facet_wrap( ~ Zone_1, scales="free") +
+  facet_wrap( ~ plot_1, scales="free") +
   scale_fill_manual(values = c(
     "Control" = "springgreen2",
     "Freshwater" = "cyan2",
     "Saltwater" = "violetred2"
   )) +
   theme_classic() +
-  labs(x = " ", y = "Chloride (ppm)", title = "Samples: Chloride") +
+  labs(x = " ", y = "Chloride (ppm)", title = "TEMPEST Porewater: Chloride") +
   theme(
     panel.spacing = unit(.05, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) + 
@@ -219,16 +235,16 @@ viz_cl_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = Cl_ppm, fil
 
 # viz_cl_plot
 
-viz_so4_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = SO4_ppm, fill = Zone_1)) +
+viz_so4_plot <- ggplot(data_plotting, aes(x = as.character(Year), y = SO4_ppm, fill = plot_1)) +
   geom_bar(stat = "identity", position = position_dodge2(preserve = "total")) +
-  facet_wrap( ~ Zone_1, scales="free") +
+  facet_wrap( ~ plot_1, scales="free") +
   scale_fill_manual(values = c(
     "Control" = "springgreen2",
     "Freshwater" = "cyan2",
     "Saltwater" = "violetred2"
   )) +
   theme_classic() +
-  labs(x = " ", y = "Sulfate (ppm)", title = "Samples: Sulfate") +
+  labs(x = " ", y = "Sulfate (ppm)", title = "TEMPEST Porewater: Sulfate") +
   theme(
     panel.spacing = unit(.05, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) + 
@@ -242,32 +258,32 @@ ggarrange(viz_cl_plot, viz_so4_plot, nrow=2, ncol=1)
 
 ```
 
-## Summarized data for Site and Zone 
+## Summarized Porewater data for Plot and Collection Date
 ```{r Summarize and Visualize Data, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
 
 ##Summarize SO4 and Cl by Date and Zone
 Dionex_avg <- data_plotting %>%
-  group_by(Collection_Date_formatted, Zone_1) %>%
+  group_by(Collection_Date_formatted, plot_1) %>%
    dplyr::summarize(mean_SO4 = mean(SO4_ppm, na.rm=TRUE),
             sd_SO4 = sd(SO4_ppm, na.rm=TRUE),
             mean_Cl = mean(Cl_ppm, na.rm=TRUE),
             sd_Cl = sd(Cl_ppm, na.rm=TRUE))
 
 # Define the specific date breaks you want to display
-specific_breaks <- as.Date(c("2024-01-01", "2025-01-01"))
+specific_breaks <- as.Date(c("2023-01-01", "2024-01-01", "2025-01-01"))
 
-viz_cl_plot_avgs <- ggplot(Dionex_avg, aes(x = Collection_Date_formatted, y = mean_Cl, color = Zone_1)) +
+viz_cl_plot_avgs <- ggplot(Dionex_avg, aes(x = Collection_Date_formatted, y = mean_Cl, color = plot_1)) +
   geom_point(size = 3) + 
   geom_errorbar(aes(ymin = mean_Cl - sd_Cl, ymax = mean_Cl + sd_Cl), width = 0.2) + 
   geom_line() + 
-  facet_wrap( ~ Zone_1, scales="free_y", ncol = 1) +
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
   scale_color_manual(values = c(
     "Control" = "springgreen2",
     "Freshwater" = "cyan2",
     "Saltwater" = "violetred2"
   )) +
   theme_classic() +
-  labs(x = "Date", y = "Chloride (ppm)", title = "Samples: Chloride") +
+  labs(x = "Date", y = "Chloride (ppm)", title = "TEMPEST Porewater: Chloride") +
   theme(
     panel.spacing = unit(0.5, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
@@ -282,18 +298,18 @@ viz_cl_plot_avgs <- ggplot(Dionex_avg, aes(x = Collection_Date_formatted, y = me
 viz_cl_plot_avgs
 
 
-viz_so4_plot_avgs <- ggplot(Dionex_avg, aes(x = Collection_Date_formatted, y = mean_SO4, color = Zone_1)) +
+viz_so4_plot_avgs <- ggplot(Dionex_avg, aes(x = Collection_Date_formatted, y = mean_SO4, color = plot_1)) +
   geom_point(size = 3) + 
   geom_errorbar(aes(ymin = mean_SO4 - sd_SO4, ymax = mean_SO4 + sd_SO4), width = 0.2) + 
   geom_line() + 
-  facet_wrap( ~ Zone_1, scales="free_y", ncol = 1) +
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
   scale_color_manual(values = c(
     "Control" = "springgreen2",
     "Freshwater" = "cyan2",
     "Saltwater" = "violetred2"
   )) +
   theme_classic() +
-  labs(x = "Date", y = "Sulfate (ppm)", title = "Samples: Sulfate") +
+  labs(x = "Date", y = "Sulfate (ppm)", title = "TEMPEST Porewater: Sulfate") +
   theme(
     panel.spacing = unit(0.5, "lines"), 
     panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
@@ -311,13 +327,13 @@ viz_so4_plot_avgs
 
 ```
 
-## Boxplot summary
-```{r Overall Boxplot, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
+## Boxplot summary for Porewater
+```{r Porewater Overall Boxplot, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
 
 ##Boxplot Summarize SO4 and Cl by Date, Site, and Zone
-viz_cl_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = Cl_ppm, fill = Zone_1)) +
+viz_cl_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = Cl_ppm, fill = plot_1)) +
   geom_boxplot() + 
-  facet_wrap( ~ Zone_1, scales="free_y", ncol = 1) +
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
   # scale_x_discrete(drop = TRUE) +
   scale_fill_manual(values = c(
     "Control" = "springgreen2",
@@ -338,9 +354,9 @@ viz_cl_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = Cl_ppm, fi
 viz_cl_boxplot
 
 
-viz_so4_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = SO4_ppm, fill = Zone_1)) +
+viz_so4_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = SO4_ppm, fill = plot_1)) +
   geom_boxplot() + 
-  facet_wrap( ~ Zone_1, scales="free_y", ncol = 1) +
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
   scale_x_discrete(drop = TRUE) +
   scale_fill_manual(values = c(
     "Control" = "springgreen2",
@@ -375,15 +391,99 @@ viz_so4_boxplot
 
 ```
 
-##Calculate summary metrics
-```{r Additional summary metrics, include=FALSE, dpi = 300}
+## Boxplot summary for Sourcewater
+```{r Sourcewater Overall Boxplot, echo=FALSE, warning=FALSE, message = FALSE, fig.width=16, fig.height=10, dpi = 300}
+
+##Only Sourcewater
+data_plotting_source <- raw_dat %>%
+  filter(str_detect(Grid, "Sourcewater"))
+
+data_plotting_source <- data_plotting_source %>% 
+    mutate(
+    plot_1 = case_when(
+      Plot == "FW" ~ "Freshwater",
+      Plot == "SW" ~ "Saltwater",
+      Plot == "ESTUARY" ~ "Estuary",
+      TRUE ~ Plot  # keep everything else unchanged
+    )
+  ) %>%
+  mutate(plot_1 = factor(plot_1, levels = c("Control", "Freshwater", "Saltwater", "Estuary")))
+
+
+##Boxplot Summarize SO4 and Cl by Date, Site, and Plot
+viz_cl_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = Cl_ppm, fill = plot_1)) +
+  geom_boxplot() + 
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
+  # scale_x_discrete(drop = TRUE) +
+  scale_fill_manual(values = c(
+    "Control" = "springgreen2",
+    "Freshwater" = "cyan2",
+    "Saltwater" = "violetred2", 
+    "Estuary" = "darkred"
+  ), labels = c("Control", "Freshwater", "Saltwater", "Estuary")) +
+  theme_classic() +
+  labs(x = " ", y = "Chloride (ppm)", title = "TEMPEST Sourcewater: Chloride") +
+  theme(
+    panel.spacing = unit(0.5, "lines"), 
+    panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))+ 
+  theme(text = element_text(size = 30))+
+  theme(axis.ticks.x = element_line(linewidth = 1))+
+  theme(axis.ticks.length.x = unit(0.25, "cm"))+ 
+  theme(legend.position = "none")
+
+viz_cl_boxplot
+
+
+viz_so4_boxplot <- ggplot(data_plotting, aes(x = Collection_Date,  y = SO4_ppm, fill = plot_1)) +
+  geom_boxplot() + 
+  facet_wrap( ~ plot_1, scales="free_y", ncol = 1) +
+  scale_x_discrete(drop = TRUE) +
+  scale_fill_manual(values = c(
+    "Control" = "springgreen2",
+    "Freshwater" = "cyan2",
+    "Saltwater" = "violetred2", 
+    "Estuary" = "darkred"
+  ), labels = c("Control", "Freshwater", "Saltwater", "Estuary")) +
+  theme_classic() +
+  labs(x = " ", y = "Sulfate (ppm)", title = "TEMPEST Sourcewater: Sulfate") +
+  theme(
+    panel.spacing = unit(0.5, "lines"), 
+    panel.border = element_rect(color = "black", fill = NA, linewidth = 1)) +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))+ 
+  theme(text = element_text(size = 30))+
+  theme(axis.ticks.x = element_line(linewidth = 1))+
+  theme(axis.ticks.length.x = unit(0.25, "cm"))+ 
+  #scale_x_discrete(labels = c("Upland", "Swamp", "Transition", "Wetland", "Surface Water"))+ 
+  theme(legend.position = "none")
+
+viz_so4_boxplot
+
+
+# ggarrange(viz_cl_boxplot, viz_so4_boxplot, nrow=1, ncol=2)
+
+# # Save as a PNG
+# png("COMPASS_SynopticCB_Cl_alldata.png", width = 2000, height = 1200, res = 100) 
+# print(viz_cl_boxplot)  # For ggplot objects, use print()
+# dev.off() 
+# 
+# # Save as a PNG
+# png("COMPASS_SynopticCB_SO4_alldata.png", width = 2000, height = 1200, res = 100) 
+# print(viz_so4_boxplot)  # For ggplot objects, use print()
+# dev.off() 
+
+```
+
+
+##Calculate summary metrics for Porewater
+```{r Porewater additional summary metrics, include=FALSE, dpi = 300}
 # It would also be great to add to our collation codes a summary chunk that will calculate value ranges, means, and standard deviations (and errors) for each site, zone, depth for each year; also for each site zone, depth overall; and for each site and zone overall so that we have some easy access to metrics. Was just thinking this might be helpful today when re-collating the DIC data.
 
 colnames(data_plotting)
 
 ##Metrics for each zone for each year
 summary_by_year <- data_plotting %>%
-  group_by(Year, Zone_1) %>%
+  group_by(Year, plot_1) %>%
    reframe(
      min_Cl_ppm = min(Cl_ppm, na.rm=TRUE),
      max_Cl_ppm = max(Cl_ppm, na.rm=TRUE), 
@@ -398,7 +498,7 @@ summary_by_year <- data_plotting %>%
 
 ##Metrics for each zone for all years
 summary_all_years <- data_plotting %>%
-  group_by(Zone_1) %>%
+  group_by(plot_1) %>%
    reframe(
      min_Cl_ppm = min(Cl_ppm, na.rm=TRUE),
      max_Cl_ppm = max(Cl_ppm, na.rm=TRUE), 
@@ -413,16 +513,40 @@ summary_all_years <- data_plotting %>%
 
 ```
 
-## Summary Tables
-```{r Summary table metrics, echo = FALSE, message = FALSE, dpi = 100}
+##Calculate summary metrics for Sourcewater
+```{r Sourcewater additional summary metrics, include=FALSE, dpi = 300}
+# It would also be great to add to our collation codes a summary chunk that will calculate value ranges, means, and standard deviations (and errors) for each site, Grid, depth for each year; also for each site Grid, depth overall; and for each site and Grid overall so that we have some easy access to metrics. Was just thinking this might be helpful today when re-collating the DIC data.
+
+colnames(data_plotting_source)
+
+##Metrics for each Grid for each year
+summary_by_year_source <- data_plotting_source %>%
+  group_by(Year, plot_1) %>%
+   reframe(
+     min_Cl_ppm = min(Cl_ppm, na.rm=TRUE),
+     max_Cl_ppm = max(Cl_ppm, na.rm=TRUE), 
+     mean_Cl_ppm = mean(Cl_ppm, na.rm=TRUE), 
+     sd_Cl_ppm = sd(Cl_ppm, na.rm=TRUE), 
+
+     min_SO4_ppm = min(SO4_ppm, na.rm=TRUE),
+     max_SO4_ppm = max(SO4_ppm, na.rm=TRUE), 
+     mean_SO4_ppm = mean(SO4_ppm, na.rm=TRUE), 
+     sd_SO4_ppm = sd(SO4_ppm, na.rm=TRUE)) %>%
+  mutate(across(where(is.numeric), round, digits = 4)) 
+
+```
+
+
+## Summary Tables for Porewater
+```{r Porewater summary table metrics, echo = FALSE, message = FALSE, dpi = 100}
 
 library(kableExtra)
 
 kable(
-  summary_by_year[, c("Year", "Zone_1", "min_Cl_ppm",	"max_Cl_ppm",	"mean_Cl_ppm", "min_SO4_ppm",	"max_SO4_ppm",	"mean_SO4_ppm")],  
+  summary_by_year[, c("Year", "plot_1", "min_Cl_ppm",	"max_Cl_ppm",	"mean_Cl_ppm", "min_SO4_ppm",	"max_SO4_ppm",	"mean_SO4_ppm")],  
   format = "latex",
   booktabs = TRUE,
-  caption = "Summary Statistics by Year"
+  caption = "Porewater Summary Statistics by Year"
 ) %>%
   kable_styling(
     latex_options = c("hold_position", "striped", "scale_down"),
@@ -432,10 +556,10 @@ kable(
   column_spec(1, bold = TRUE)
 
 kable(
-  summary_all_years[, c("Zone_1", "min_Cl_ppm",	"max_Cl_ppm",	"mean_Cl_ppm", "min_SO4_ppm",	"max_SO4_ppm",	"mean_SO4_ppm")],  
+  summary_all_years[, c("plot_1", "min_Cl_ppm",	"max_Cl_ppm",	"mean_Cl_ppm", "min_SO4_ppm",	"max_SO4_ppm",	"mean_SO4_ppm")],  
   format = "latex",
   booktabs = TRUE,
-  caption = "Summary Statistics by Zone"
+  caption = "Porewater Summary Statistics by Plot"
 ) %>%
   kable_styling(
     latex_options = c("hold_position", "striped", "scale_down"),
@@ -446,14 +570,38 @@ kable(
 
 ```
 
+## Summary Tables for Sourcewater
+```{r Sourcewater summary table metrics, echo = FALSE, message = FALSE, dpi = 100}
+
+library(kableExtra)
+
+kable(
+  summary_by_year_source[, c("Year", "plot_1", "min_Cl_ppm",	"max_Cl_ppm",	"mean_Cl_ppm", "min_SO4_ppm",	"max_SO4_ppm",	"mean_SO4_ppm")],  
+  format = "latex",
+  booktabs = TRUE,
+  caption = "Sourcewater Summary Statistics by Year"
+) %>%
+  kable_styling(
+    latex_options = c("hold_position", "striped", "scale_down"),
+    font_size = 12
+  ) %>%
+  row_spec(0, bold = TRUE) %>%   # header
+  column_spec(1, bold = TRUE)
+
+```
+
+
 ##Write out summarized data
 ```{r write out summarized data, include=FALSE}
 
-#write out a csv of all the data to the main folder: 
-write.csv(summary_by_year, "COMPASS_TEMPEST_PW_SO4_Cl_Summarized_By_Year.csv")
+#write out a csv of the Porewater Summary Statistics by Year to the main folder: 
+write.csv(summary_by_year, "COMPASS_TEMPEST_PW_DOC_Summarized_By_Year.csv")
 
-#write out a csv of the metadata associated with the data: 
-write.csv(summary_all_years, "COMPASS_TEMPEST_PW_SO4_Cl_Summarized_Years_Combined.csv")
+#write out a csv of the Porewater Summary Statistics by Grid to the main folder: 
+write.csv(summary_all_years, "COMPASS_TEMPEST_PW_DOC_Summarized_Years_Combined.csv")
+
+#write out a csv of the Sourcewater Summary Statistics by Year to the main folder: 
+write.csv(summary_by_year_source, "COMPASS_TEMPEST_SOURCE_DOC_Summarized_By_Year.csv")
 
 ```
 
